# SubmergeUI

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  rules.pest
examples/: button.rs  custom.rs  custom_mod.rs
src/: lib.rs
src/box/: box_events.rs  box_plugin.rs  box_resource.rs  box_states.rs  box_systems.rs  mod.rs
src/core/: mod.rs  parser.rs  style_bundles.rs  ui_bundles.rs  ui_components.rs  ui_plugin.rs  ui_systems.rs
src/utils/: border_radius.rs  colors.rs  font_size.rs  keys.rs  mod.rs
src/widgets/: checkbox.rs  input.rs  mod.rs  selector.rs  slider.rs  style_bundles.rs  toggle.rs  widget_components.rs  widget_plugin.rs  widget_systems.rs
